# stencil-cli

./: CLAUDE.md  Cargo.toml  config.stencil.json  secrets.stencil.json
src/cache/: mod.rs
src/proxy/: mod.rs
src/renderer/: lang_assembler.rs  paper.rs
src/server/: app.rs
src/server/routes/: favicon.rs  renderer.rs  static_assets.rs  theme_assets.rs
src/utils/: int_uuid.rs
stencil-but-fast/src/: main.rs
stencil-but-fast/src/cache/: memory_cache.rs
stencil-but-fast/src/commands/: init.rs  start.rs
stencil-but-fast/src/config/: mod.rs  stencil_config.rs  theme_config.rs
stencil-but-fast/src/proxy/: client.rs  headers.rs
stencil-but-fast/src/renderer/: frontmatter.rs  mod.rs  response.rs  template_assembler.rs
stencil-but-fast/src/server/: state.rs
stencil-but-fast/src/server/routes/: mod.rs  proxy.rs  theme_assets.rs
stencil-but-fast/src/utils/: mod.rs  url_utils.rs
stencil-but-fast/src/watcher/: file_watcher.rs
